Fixes database defaults for postgres, adds meta tag to fix sizing on mobile devices

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -68,7 +68,7 @@ body {
   width: 50%;
   min-width: 290px;
   max-width: 600px;
-  margin: 45px 0 55px 0;
+  margin: 90px 0 55px 0;
 }
 
 .homepage-form-header {
